@@ -5,7 +5,9 @@ package net.sourceforge.pmd.lang.ecmascript.ast;
 
 import org.mozilla.javascript.ast.ArrayLiteral;
 
-public class ASTArrayLiteral extends AbstractEcmascriptNode<ArrayLiteral> implements DestructuringNode {
+public class ASTArrayLiteral extends AbstractEcmascriptNode<ArrayLiteral> implements DestructuringNode, TrailingCommaNode {
+    private boolean trailingComma;
+
     public ASTArrayLiteral(ArrayLiteral arrayLiteral) {
 	super(arrayLiteral);
     }
@@ -19,5 +21,13 @@ public class ASTArrayLiteral extends AbstractEcmascriptNode<ArrayLiteral> implem
 
     public boolean isDestructuring() {
 	return node.isDestructuring();
+    }
+
+    public boolean isTrailingComma() {
+	return trailingComma;
+    }
+
+    public void setTrailingComma(boolean trailingComma) {
+	this.trailingComma = trailingComma;
     }
 }
