@@ -306,5 +306,40 @@ function(arg) {
         </example>
     </rule>
 
+    <rule name="AvoidTrailingComma"
+          message="Avoid trailing commas in object or array literals"
+          language="ecmascript"
+          since="5.1"
+          class="net.sourceforge.pmd.lang.rule.XPathRule"
+          externalInfoUrl="${pmd.website.baseurl}/rules/ecmascript/basic.html#AvoidTrailingComma">
+    <description>
+This rule helps improve code portability due to differences in browser treatment of trailing commas in object or array literals. 
+    </description>
+  <properties>
+    <property name="xpath">
+    <value>
+<![CDATA[
+	//ObjectLiteral[$allowObjectLiteral = "false" and @TrailingComma = 'true']
+|
+	//ArrayLiteral[$allowArrayLiteral = "false" and @TrailingComma = 'true']
+]]>
+    </value>
+    </property>
+    <property name="allowObjectLiteral" type="Boolean" value="false" description="Allow a trailing comma within an object literal" />
+    <property name="allowArrayLiteral" type="Boolean" value="false" description="Allow a trailing comma within an array literal" />
+    </properties>
+  <priority>1</priority>
+  <example>
+<![CDATA[
+function(arg) {
+    var obj1 = { a : 1 }; // Ok
+    var arr1 = [ 1, 2 ]; // Ok
+
+    var obj2 = { a : 1, }; // Syntax error in some browsers!
+    var arr2 = [ 1, 2, ]; // Length 2 or 3 depending on the browser!
+}
+]]>
+        </example>
+    </rule>
 
 </ruleset>
